--- a/cblmoney-ui/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/cblmoney-ui/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form #formulario ="ngForm" autocomplete="off">
+  <form #formulario="ngForm" autocomplete="off">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Novo Lançamento</h1>
@@ -11,9 +11,10 @@
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento*</label>
-        <p-calendar dateFormat="dd/mm/yy" [showIcon]="true"
-        required name="vencimento" #vencimento="ngModel" ngModel></p-calendar>
-        <div *ngIf="vencimento.hasError('required') && vencimento.touched" class=  "ui-message ui-messages-error">Informe uma data de Vencimento</div>
+        <p-calendar dateFormat="dd/mm/yy" [showIcon]="true" required name="vencimento" #vencimento="ngModel" ngModel></p-calendar>
+        <!--<app-message [control]="vencimento" error="required"
+        text="Informe uma data de vencimento"></app-message> -->
+
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
@@ -23,26 +24,28 @@
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição*</label>
-        <input pInputText type="text" name="descricao" ngModel #descricao="ngModel" required minlength="10" />
-        <div *ngIf="descricao.hasError('required') && descricao.touched" class="ui-message ui-messages-error">
-          Informe uma descrição
-        </div>
-        <div *ngIf="descricao.hasError('minlength') && descricao.dirty" class="ui-message ui-messages-error">
-          Mínimo de {{descricao.errors.minlength.requiredLength}} caracteres. Você digitou apenas {{descricao.errors.minlength.actualLength}}
-        </div>
+        <input pInputText type="text" name="descricao"
+        ngModel #descricao="ngModel" required minlength="10" />
+
+       <!-- <app-message [control]="descricao" error="required"
+        text="Informe uma descrição"></app-message>
+        <app-message [control]="descricao" error="minlength"
+        text="Mínimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres. Você digitou apenas {{ descricao.errors?.minlength?.actualLength }}"></app-message>
+       -->
       </div>
 
       <div class="ui-g-12 ui-md-3  ui-fluid">
         <label>Valor*</label>
         <input pInputText type="text" placeholder="0,00" currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',',allowNegative: false }"
-          ngModel name="valor" #valor = "ngModel" required/>
-          <div *ngIf = "valor.hasError('required') && valor.touched" class = "ui-message ui-messages-error">Informe um valor</div>
+          ngModel name="valor" #valor="ngModel" required/>
+       <!--    <app-message [control]="Valor" error="required"
+        text="Informe um valor"></app-message>-->
+
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Categoria*</label>
-        <p-dropdown [options]="categorias"
-        [autoWidth]="false"  ngModel placeholder="Selecione uma categoria" [filter]="true"
-        required name = "categoria"></p-dropdown>
+        <p-dropdown [options]="categorias" [autoWidth]="false" ngModel placeholder="Selecione uma categoria" [filter]="true" required
+          name="categoria"></p-dropdown>
       </div>
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Pessoa*</label>
