--- a/cblmoney-ui/src/app/app.component.html
+++ b/cblmoney-ui/src/app/app.component.html
@@ -1,5 +1,13 @@
 <app-navbar></app-navbar>
-<!--<app-lancamentos-pesquisa></app-lancamentos-pesquisa> -->
-<app-pessoas-pesquisa></app-pessoas-pesquisa>
-<!--<app-lancamento-cadastro></app-lancamento-cadastro>-->
-<!--<app-pessoa-cadastro></app-pessoa-cadastro>-->
+
+<router-outlet></router-outlet>
+
+
+<ng2-toasty></ng2-toasty>
+
+<p-confirmDialog header="Confirmação" icon ="fa fa-question-circle" #confirmacao>
+  <p-footer>
+    <button type = "button" pButton icon="fa fa-check" label ="Sim" (click)="confirmacao.accept()"></button>
+    <button type = "button" pButton icon="fa fa-times" label ="Não" (click)="confirmacao.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
