--- a/cblmoney-ui/src/app/core/navbar/navbar.component.html
+++ b/cblmoney-ui/src/app/core/navbar/navbar.component.html
@@ -11,9 +11,9 @@
 
   <ul class="navbar-menu"[hidden]="!exibindoMenu">
     <li class = "navbar-user">Jose da Silva</li>
-    <li class = "navbar-menu-item"><a href="#"> Lançamentos</a></li>
-    <li class = "navbar-menu-item"><a href="#">Pessoas</a></li>
-    <li class = "navbar-menu-item"><a href="#">Logout</a></li>
+    <li class = "navbar-menu-item" routerLinkActive="ativo"><a routerLink="/lancamentos"> Lançamentos</a></li>
+    <li class = "navbar-menu-item" routerLinkActive="ativo"><a routerLink = "/pessoas">Pessoas</a></li>
+    <li class = "navbar-menu-item" routerLinkActive="ativo"><a href="#">Logout</a></li>
   </ul>
 
 </nav>
