--- a/cblmoney-ui/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/cblmoney-ui/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -1,14 +1,14 @@
 <div class="container">
 
-  <form #formulario="ngForm" autocomplete="off">
+  <form #formulario="ngForm" autocomplete="off" (ngSubmit)="salvar(formulario)">
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1>Nova Pessoa</h1>
+        <h1>{{getEditando()? 'Edição de':'Nova'}} Pessoa</h1>
       </div>
 
       <div class="ui-g-12 ui-fluid">
         <label>Nome*</label>
-        <input pInputText type="text" name="nome" ngModel #nome="ngModel" required minlength="8" />
+        <input pInputText type="text" name="nome"  #nome="ngModel" required minlength="8" [(ngModel)]= "pessoa.nome" />
          <app-message [control]="nome" error="required" text="Informe o nome"></app-message>
         <app-message [control]="nome" error="minlength" text="Mínimo de {{nome.errors?.minlength?.requiredLength}} caracteres. Você digitou apenas {{nome.errors?.minlength?.actualLength}}"></app-message>
 
@@ -16,53 +16,54 @@
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Logradouro*</label>
-        <input pInputText type="text" name="logradouro" required ngModel #logradouro="ngModel" minlength="10" />
+        <input pInputText type="text" name="logradouro" required  #logradouro="ngModel" minlength="10" [(ngModel)]="pessoa.endereco.logradouro"/>
 
         <app-message [control]="logradouro" error="required" text="Informe o logradouro"></app-message>
         <app-message [control]="logradouro" error="minlength" text="Mínimo de {{logradouro.errors?.minlength?.requiredLength}} caracteres."></app-message>
 
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
-        <label>Número*</label>
-        <input pInputText type="text" name="numero" required ngModel #numero="ngModel" />
-         <app-message [control]="numero" error="required" text="Informe o número"></app-message>
+        <label>Número</label>
+        <input pInputText type="text" name="numero"
+          [(ngModel)]="pessoa.endereco.numero"
+#numero="ngModel" required>
 
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
-        <input pInputText type="text" />
+        <input pInputText name = "complemento" type="text" [(ngModel)]="pessoa.endereco.complemento"/>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro*</label>
-        <input pInputText type="text" required name="bairro" #bairro="ngModel" ngModel/>
+        <input pInputText type="text" required name="bairro" #bairro="ngModel"  [(ngModel)]="pessoa.endereco.bairro"/>
         <app-message [control]="bairro" error="required" text="Informe o bairro"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP*</label>
-        <p-inputMask mask="99.999-999" required name="cep" #cep="ngModel" ngModel></p-inputMask>
+        <p-inputMask mask="99.999-999" required name="cep" #cep="ngModel"  [(ngModel)]="pessoa.endereco.cep"></p-inputMask>
          <app-message [control]="cep" error="required" text="Informe o CEP"></app-message>
 
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado*</label>
-        <input pInputText type="text" required name="estado" #estado="ngModel" ngModel/>
+        <input pInputText type="text" required name="estado" #estado="ngModel"  [(ngModel)]="pessoa.endereco.estado"/>
         <app-message [control]="estado" error="required" text="Informe o Estado"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade*</label>
-        <input pInputText type="text" required name="cidade" #cidade="ngModel" ngModel/>
+        <input pInputText type="text" required name="cidade" #cidade="ngModel" [(ngModel)]="pessoa.endereco.cidade"/>
        <app-message [control]="cidade" error="required" text="Informe a cidade"></app-message>
       </div>
 
       <div class="ui-g-12">
         <button pButton label="Salvar" type="submit" style="margin-right: 5px" [disabled]=formulario.invalid></button>
-        <button pButton label="Novo" class="ui-button-info" style="margin-right: 5px"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+        <button pButton routerLink="/pessoas/novo" label="Novo" class="ui-button-info" style="margin-right: 5px"></button>
+        <a routerLink="/pessoas">Voltar para a pesquisa</a>
       </div>
     </div>
   </form>
