--- a/cblmoney-ui/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/cblmoney-ui/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -1,23 +1,49 @@
 <div class="container">
   <div class="ui-g">
 
-    <div class="ui-g-12">
-      <h1>Pessoas</h1>
-    </div>
+    <form autocomplete="off" (ngSubmit)="pesquisar()">
 
-    <div class="ui-g-12 ui-fluid">
-      <label>Nome</label>
-      <input type="text" pInputText/>
-    </div>
 
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
+      <div class="ui-g-12">
+        <h1>Pessoas</h1>
+      </div>
+
+      <div class="ui-g-12 ui-fluid">
+        <label>Nome</label>
+        <input type="text" pInputText name="nome" [(ngModel)]="filtro.nome" />
+      </div>
+
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </form>
   </div>
 
-  <div class = "ui-g">
-    <div class = "ui-g-12">
-      <app-pessoas-grid [pessoas] = "pessoas"></app-pessoas-grid>
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <p-dataTable [value]="pessoas" [paginator]="true" [rows]="filtro.itensPorPagina" [totalRecords]="totalRegistros" [responsive]="true"
+        [lazy]="true" [loading]="loading" (onLazyLoad)="aoMudarPagina($event)" emptyMessage="Nenhum registro encontrado" #tabela>
+
+        <p-column field="nome" header="Nome"></p-column>
+        <p-column field="endereco.cidade" header="Cidade"></p-column>
+        <p-column field="endereco.estado" header="Estado"></p-column>
+        <p-column field="status" header="Status">
+          <ng-template let-pess="rowData" pTemplate="body">
+            <a href="javascript:;" [pTooltip]="pess.ativo?'Desativar':'Ativar'" (click)="editarAtivo(pess)">{{pess.ativo?'Ativo':'Inativo'}}</a>
+          </ng-template>
+        </p-column>
+        <p-column styleClass="col-acoes">
+          <ng-template pTemplate="body" let-pess="rowData">
+            <a pButton icon="fa fa-pencil" pTooltip="Editar" tooltipPosition="top"
+            [routerLink]="['/pessoas/',pess.codigo]"></a>
+            <button pButton icon="fa fa-trash" style="margin-left: 5px" pTooltip="Excluir" tooltipPosition="top" (click)="confirmarExclusao(pess)"></button>
+          </ng-template>
+        </p-column>
+      </p-dataTable>
+
+    </div>
+    <div class="ui-g-12">
+      <a pButton label="Nova Pessoa" routerLink="/pessoas/novo"></a>
     </div>
   </div>
 
