--- a/cblmoney-ui/src/app/core/navbar/navbar.component.css
+++ b/cblmoney-ui/src/app/core/navbar/navbar.component.css
@@ -1,47 +1,50 @@
-.navbar{
+.navbar {
+  padding: 10px 0;
   background-color: #1e94d2;
-  padding:  10px 0;
 }
 
-.navbar-toggle{
-  color: white;
+.navbar-toggle {
+  color: #fff;
 }
 
-.navbar-menu{
-  background-color:#3a3633;
+.navbar-menu {
   position: fixed;
-  top:0;
+  top: 0;
   bottom: 0;
   right: 0;
   width: 210px;
   margin: 0;
+  padding: 0;
   z-index: 9998;
+
+  background-color: #3a3633;
+
   list-style: none;
-  padding: 0px;
 }
 
-.navbar-user{
-  padding: 17.5px;
+.navbar-usuario {
+  padding: 15px;
   margin-bottom: 15px;
-  color:white;
-  font-weight: bold;
-  text-transform: uppercase;
   border-bottom: 1px solid #525151;
+
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #fff;
 }
 
-.navbar-menu-item{
-  padding: 15px
+.navbar-menuitem {
+  padding: 15px;
 }
 
-.navbar-menu-item a{
+.navbar-menuitem a {
   color: #c0bbb7;
   text-decoration: none;
 }
 
-.navbar-menu-item a:hover{
-  color: white;
+.navbar-menuitem a:hover {
+  color: #fff;
 }
 
-.navbar-menu-item.ativo{
+.navbar-menuitem.ativo {
   background-color: #494541;
 }
