--- a/cblmoney-ui/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/cblmoney-ui/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -36,7 +36,10 @@
           <ng-template pTemplate="body" let-pess="rowData">
             <a pButton icon="fa fa-pencil" pTooltip="Editar" tooltipPosition="top"
             [routerLink]="['/pessoas/',pess.codigo]"></a>
-            <button pButton icon="fa fa-trash" style="margin-left: 5px" pTooltip="Excluir" tooltipPosition="top" (click)="confirmarExclusao(pess)"></button>
+            <button pButton icon="fa fa-trash" style="margin-left: 5px" pTooltip="Excluir" tooltipPosition="top"
+            (click)="confirmarExclusao(pess)"
+            [disabled]="!auth.temPermissao('ROLE_EXCLUIR_PESSOA')"></button>
+            <!--*ngIf="auth.temPermissao('ROLE_EXCLUIR_PESSOA')"-->
           </ng-template>
         </p-column>
       </p-dataTable>
